--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ services:
   postgres:
     image: postgres:13
     environment:
-      POSTGRES_DB: test
+      POSTGRES_DB: barterDB
       POSTGRES_USER: test
       POSTGRES_PASSWORD: test
     ports:
