--- a/.env
+++ b/.env
@@ -9,3 +9,6 @@ POSTGRES_DB_DSN="host=postgres port=5432 user=admin password=admin dbname=postgr
 POSTGRES_CONN="postgres://admin:admin@postgres:5432/postgres"
 
 POSTGRES_CONN_LOCAL=postgres://admin:admin@localhost:5432/postgres
+
+HASHER_SALT="asdfg67hHB9jh87Hhgc"
+JWT_SECRET="secret"
