--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -1,10 +1,10 @@
 # Where are all the schema files located? globs are supported eg  src/**/*.graphqls
 schema:
-  - internal/controller/graph/*.graphqls
+  - graph/*.graphqls
 
 # Where should the generated server code go?
 exec:
-  filename: internal/controller/graph/generated.go
+  filename: graph/generated.go
   package: graph
 
 # Uncomment to enable federation
@@ -17,7 +17,7 @@ exec:
 
 # Where should any generated models go?
 model:
-  filename: internal/controller/graph/model/models_gen.go
+  filename: graph/model/models_gen.go
   package: model
 
 # Where should the resolver implementations go?
@@ -27,7 +27,7 @@ resolver:
   package: graph
   filename_template: "{name}.resolvers.go"
   # Optional: turn on to not generate template comments above resolvers
-  # omit_template_comment: false
+#  omit_template_comment: false
 
 # Optional: turn on use ` + "`" + `gqlgen:"fieldName"` + "`" + ` tags in your models
 # struct_tag: json
@@ -76,7 +76,7 @@ call_argument_directives_with_null: true
 # gqlgen will search for any type names in the schema in these go packages
 # if they match it will use them, otherwise it will generate them.
 autobind:
-#  - "github.com/dugtriol/BarterApp/graph/model"
+  - "github.com/dugtriol/BarterApp/graph/model"
 
 # This section declares type mapping between the GraphQL and go type systems
 #
@@ -95,3 +95,11 @@ models:
       - github.com/99designs/gqlgen/graphql.Int
       - github.com/99designs/gqlgen/graphql.Int64
       - github.com/99designs/gqlgen/graphql.Int32
+  User:
+    fields:
+      postedProducts:
+        resolver: true
+  Product:
+    fields:
+      createdBy:
+        resolver: true
