--- a/.env
+++ b/.env
@@ -12,3 +12,11 @@ POSTGRES_CONN_LOCAL=postgres://admin:admin@localhost:5432/postgres
 
 HASHER_SALT="asdfg67hHB9jh87Hhgc"
 JWT_SECRET="secret"
+
+BUCKET_NAME=barterapp
+REGION=ru-central1
+ENDPOINT_RESOLVER=https://storage.yandexcloud.net
+
+aws_access_key_id=YCAJE6tmSk3TctdMSs3a6lkGe
+aws_secret_access_key=YCM4vf3NqvBQWdJi5qpgH9QNocGUnJ1GCqVVUaW9
+region=ru-central1
